update home page

--- a/src/features/App/App.css
+++ b/src/features/App/App.css
@@ -187,6 +187,24 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
 }
 
+/** Tile bubbles **/
+
+.token-smartag {
+    position: absolute;
+    color: #fff;
+    text-transform: uppercase;
+    background: #00d285;
+    line-height: 20px;
+    font-size: 13px;
+    font-weight: 700;
+    padding: 7px 30px;
+    min-width: 200px;
+    text-align: center;
+    top: 20px;
+    left: -60px;
+    transform: rotate(-45deg);
+}
+
 /** Connector modal **/
 .web3modal-modal-lightbox {
     z-index: 200 !important;
