--- a/src/features/App/App.css
+++ b/src/features/App/App.css
@@ -193,25 +193,301 @@ code {
     z-index: 200 !important;
 }
 
-
-
-@font-face {
-	font-family:'SF Pro Display';
-	font-style:normal;
-	font-weight:100;
-	src:local('☺'), url("../../assets/fonts/sf-pro-display_regular.woff2") format("woff2");
+/** Fancy Design **/
+html:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    z-index: -5;
+    background: linear-gradient(180deg,rgba(50,70,80,.9) 0,#0d101b 100%);
 }
 
-@font-face {
-	font-family:'SF Pro Text';
-	font-style:normal;
-	font-weight:100;
-	src:local('☺'), url("../../assets/fonts/sf-pro-text_regular.woff2") format("woff2");
+html:after {
+    content: "";
+    position: fixed;
+    top: 0;
+    height: 100%;
+    left: 0;
+    right: 0;
+    z-index: -10;
+    background-color: #273136;
+    background-image: url("../../assets/img/iceberg-min.jpg");
+    background-position: center;
+    background-attachment: initial;
+    height: 100%;
+    transition: background .2s linear;
+    background-size: cover;
 }
 
-@font-face {
-	font-family:'SF Pro Text SemiBold';
-	font-style:normal;
-	font-weight:100;
-	src:local('☺'), url("../../assets/fonts/sf-pro-text_semibold.woff2") format("woff2");
+body{
+    background: 0 0;
+    font-weight: 300;
+    letter-spacing: .046875rem;
+    position: relative;
+    min-height: 100vh;
+    z-index: 9999;
 }
+
+body:before{
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background-attachment: initial;
+    background-color: transparent;
+    background-image: url("../../assets/img/pattern.png");
+    background-size: 4.6875rem;
+    background-repeat: repeat;
+    background-attachment: initial;
+    z-index: -5;
+}
+
+
+/** Fancy Card **/
+
+.card {
+    --bs-border-color: #ffffff;
+    position: relative;
+    border: none;
+}
+.card.card-expand {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1120;
+    border-radius: 0;
+    margin: 0 !important;
+    padding: 0.3125rem;
+    background: rgba(29, 40, 53, 0.95);
+}
+.card.card-expand .card-body,
+.card.card-expand .card-header {
+    border-radius: 0;
+}
+.card.card-expand .card-body {
+    flex: 1 0 0;
+    overflow: scroll;
+}
+.card.card-expand:not(.border-0):before {
+    top: 5px;
+    bottom: 5px;
+    left: 20px;
+    right: 20px;
+}
+.card.card-expand:not(.border-0):after {
+    top: 20px;
+    bottom: 20px;
+    left: 5px;
+    right: 5px;
+}
+.card.card-expand .card-arrow {
+    margin: 5px;
+}
+.card .card-header .card-header-tabs .nav-item .nav-link.active {
+    border-bottom-color: transparent;
+}
+.card .card-body .nav-tabs .nav-item .nav-link.active {
+    background: 0 0;
+    border-bottom-color: none;
+}
+.card:after,
+.card:before {
+    content: "";
+    position: absolute;
+}
+.card:not(.border-0):before {
+    left: 15px;
+    right: 15px;
+    top: 0;
+    bottom: 0;
+    border-top: 1px solid var(--bs-border-color);
+    border-bottom: 1px solid var(--bs-border-color);
+    opacity: 0.3;
+}
+.card:not(.border-0):after {
+    top: 15px;
+    bottom: 15px;
+    left: 0;
+    right: 0;
+    border-left: 1px solid var(--bs-border-color);
+    border-right: 1px solid var(--bs-border-color);
+    opacity: 0.3;
+}
+.card > :not(.card-arrow):not(.card-img-overlay):not(.card-img):not(.hljs-container) {
+    position: relative;
+    z-index: 10;
+}
+.card .card-arrow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.card .card-arrow-bottom-left,
+.card .card-arrow-bottom-right,
+.card .card-arrow-top-left,
+.card .card-arrow-top-right {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+}
+.card .card-arrow-bottom-left:before,
+.card .card-arrow-bottom-right:before,
+.card .card-arrow-top-left:before,
+.card .card-arrow-top-right:before {
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 8px;
+    background: var(--bs-border-color);
+    opacity: 0.75;
+}
+.card .card-arrow-bottom-left:after,
+.card .card-arrow-bottom-right:after,
+.card .card-arrow-top-left:after,
+.card .card-arrow-top-right:after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    background: var(--bs-border-color);
+    opacity: 0.75;
+}
+.card .card-arrow-top-left,
+.card .card-arrow-top-right {
+    top: 0;
+}
+.card .card-arrow-top-left:before,
+.card .card-arrow-top-right:before {
+    top: 2px;
+}
+.card .card-arrow-top-left:after,
+.card .card-arrow-top-right:after {
+    top: 0;
+}
+.card .card-arrow-bottom-left,
+.card .card-arrow-bottom-right {
+    bottom: 0;
+}
+.card .card-arrow-bottom-left:before,
+.card .card-arrow-bottom-right:before {
+    bottom: 2px;
+}
+.card .card-arrow-bottom-left:after,
+.card .card-arrow-bottom-right:after {
+    bottom: 0;
+}
+.card .card-arrow-bottom-left,
+.card .card-arrow-top-left {
+    left: 0;
+}
+.card .card-arrow-bottom-left:after,
+.card .card-arrow-bottom-left:before,
+.card .card-arrow-top-left:after,
+.card .card-arrow-top-left:before {
+    left: 0;
+}
+.card .card-arrow-bottom-right,
+.card .card-arrow-top-right {
+    right: 0;
+}
+.card .card-arrow-bottom-right:after,
+.card .card-arrow-bottom-right:before,
+.card .card-arrow-top-right:after,
+.card .card-arrow-top-right:before {
+    right: 0;
+}
+
+/** Extra CSS to move out later **/
+
+.bg-white {
+    background-color: rgba(255,255,255,0.15)!important;
+}
+
+
+
+/** Fonts **/
+
+
+
+    /* thai */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkeNIh1U5_F7AY.woff2) format('woff2');
+    unicode-range: U+0E01-0E5B, U+200C-200D, U+25CC;
+}
+    /* vietnamese */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkeNIh1SJ_F7AY.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkeNIh1SZ_F7AY.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkeNIh1R5_F.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+  /* thai */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkebIl1U5_F7AY.woff2) format('woff2');
+    unicode-range: U+0E01-0E5B, U+200C-200D, U+25CC;
+}
+  /* vietnamese */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkebIl1SJ_F7AY.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkebIl1SZ_F7AY.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Chakra Petch';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/chakrapetch/v8/cIflMapbsEk7TDLdtEz1BwkebIl1R5_F.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+  
